--- a/src/style.css
+++ b/src/style.css
@@ -257,6 +257,29 @@ h3 .edit_album:hover i{
     background-color: #DEA0A0;
     color: #3E2525;
 }
+#drop_zone{
+    border: 3px dashed #99CC41;
+    width: 100%;
+    height: 100px;
+}
+#file_canvas_wrapper{
+    width: 100%;
+}
+#file_canvas{
+    /*width:100%;*/
+    max-width: 100%;
+}
+#upload_icon_wrapper{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-size: 3rem;
+    display: flex;
+    color: #99CC41;
+}
+#upload_icon_wrapper i{
+    margin: auto;
+}
 .footer{
     background-color: #565656;
     color: white;
