--- a/src/style.css
+++ b/src/style.css
@@ -37,6 +37,9 @@ header{
 .reg_and_auth a{
     border: 2px solid #030303;
 }
+.reg_and_auth span i{
+    margin-right: 6px;
+}
 .reg_and_auth a:hover{
     border: 2px solid #030303;
     background-color: #030303;
