--- a/src/style.css
+++ b/src/style.css
@@ -188,53 +188,16 @@ header{
 .images figcaption{
     font-size: 1.5rem;
 }
-/*.images > div > div > .add_image_btn::before{
- background-color: black;
- width: 100%;
- height: 4px;
- content: "";
- position: absolute;
- top:calc(50% - 2px);
+h1 .edit_album{
+    color: #99CC40;
+    font-size: 2rem;
 }
-.images > div > div > .add_image_btn::after{
- background-color: black;
- width: 100%;
- height: 4px;
- content: "";
- position: absolute;
- left: 0;
- top: 0;
- top:calc(50% - 2px);
- transform: rotateZ(90deg);
+h1 .edit_album:hover{
+    color: #ACE648;
 }
-.images > div > div > .add_image_btn:hover::before{
- background-color: #99CC40;
- width: 100%;
- height: 4px;
- content: "";
- position: absolute;
- top:calc(50% - 2px);
+h1 .edit_album:hover i{
+    transform: rotateZ(-20deg);
 }
-.images > div > div > .add_image_btn:hover::after{
- background-color: #99CC40;
- width: 100%;
- height: 4px;
- content: "";
- position: absolute;
- left: 0;
- top: 0;
- top:calc(50% - 2px);
- transform: rotateZ(90deg);
-}*/
-/*    .album_info .add_image_btn:hover::before{
-    background-color: black;
-    width: 100%;
-    height: 4px;
-    content: "";
-    position: absolute;
-    top:calc(50% - 2px);
-  }*/
-
 h3 .edit_album{
     font-size: 1rem;
     color: #99CC40 !important;
