--- a/src/style.css
+++ b/src/style.css
@@ -227,6 +227,32 @@ h3 .edit_album:hover i{
 .edit_image_link:hover i{
     transform: rotateZ(-20deg);
 }
+.delete_image_btn{
+    width: 30px;
+    height: 30px;
+    background-color: #CC5E40;
+    border-radius: 50%;
+    display: inline-block;
+    position: absolute;
+    font-size: 30px;
+    box-shadow: 0 0 2px rgba(0,0,0,.75);
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s;
+    text-decoration: none;
+    text-align: center;
+    line-height: 26px;
+    font-weight: bold;
+    color: black;
+    margin-left: 10px;
+    border: none;
+}
+.delete_image_btn:hover{
+    color: black;
+    background-color: #f1594e;
+}
 #info{
     padding: 10px;
     margin-top: 10px;
