--- a/src/style.css
+++ b/src/style.css
@@ -230,6 +230,14 @@ h3 .edit_album{
 h3:hover .edit_album{
     opacity: 1;
 }
+h3 .delete_image_btn{
+    display: none;
+    margin-left: 4px;
+    margin-top: 2px;
+}
+h3:hover .delete_image_btn{
+    display: inline-block;
+}
 h3 .edit_album:hover{
     color: #ACE648 !important;
 }
@@ -239,6 +247,9 @@ h3 .edit_album:hover i{
 }
 .no_images .edit_album{
     opacity: 1;
+}
+.no_images .delete_image_btn{
+    display: inline-block;
 }
 .edit_image_link{
     color: #4C681C;
@@ -258,11 +269,8 @@ h3 .edit_album:hover i{
     position: absolute;
     font-size: 30px;
     box-shadow: 0 0 2px rgba(0,0,0,.75);
-    -webkit-transition: .3s;
-    -moz-transition: .3s;
-    -ms-transition: .3s;
-    -o-transition: .3s;
-    transition: .3s;
+    transition-property: background-color;
+    transition-duration: .3s;
     text-decoration: none;
     text-align: center;
     line-height: 26px;
