--- a/src/style.css
+++ b/src/style.css
@@ -64,16 +64,16 @@ header{
     width:100%;
     height:auto;
 }
-.images > div > div{
+.images > div > div > div > div{
     position: relative;
 }
-.images > div > div > .album_info{
+.images > div > div > div > div > .album_info{
     position: absolute;
-    left: calc(1.5rem / 2);
+    left: 0;
     top: 0;
     background-color: rgba(0,0,0,.65);
     color:white;
-    width: calc(100% - 1.5rem);
+    width: 100%;
     height: 0;
     overflow: hidden;
     -webkit-transition: .3s;
@@ -82,7 +82,7 @@ header{
     -o-transition: .3s;
     transition: .3s;
 }
-.images > div > div:hover > .album_info{
+.images > div > div > div > div:hover > .album_info{
     height: 100%;
 }
 
@@ -109,7 +109,7 @@ header{
 .album_info .description, .album_info .totally_images{
     font-size: 0.8rem;
 }
-.images > div > div > .add_image_btn{
+.images > div > div > div > div > .add_image_btn{
     width: 30px;
     height: 30px;
     /*background-color: white;*/
@@ -135,6 +135,11 @@ header{
     font-weight: bold;
     color: black;
 
+}
+.images > div > div > div > div:hover > .add_image_btn:hover{
+    background-color: black;
+    color: #99CC40;
+    transform: translate(-50%, -50%) rotateZ(360deg);
 }
 .add_image_link{
     display: inline-block;
@@ -199,16 +204,14 @@ header{
 .delete_album_btn:hover{
     background-color: #f1594e;
 }
-.images > div > div:hover > .add_image_btn{
+.images > div > div > div > div:hover > .add_image_btn{
     opacity: 1;
 }
-.images > div > div:hover > .add_image_btn:hover{
-    background-color: black;
-    color: #99CC40;
-    transform: translate(-50%, -50%) rotateZ(360deg);
-}
 .images figcaption{
+    margin-top: 5px;
+    margin-bottom: 5px;
     font-size: 1.5rem;
+    text-align: center;
 }
 h1 .edit_album{
     color: #99CC40;
@@ -400,4 +403,20 @@ h3 .edit_album:hover i{
     box-sizing:border-box;
     border-left:8px solid #030303;
     border-right:8px solid #030303;
+}
+.my-masonry-grid {
+    display: -webkit-box; /* Not needed if autoprefixing */
+    display: -ms-flexbox; /* Not needed if autoprefixing */
+    display: flex;
+    margin-left: -30px; /* gutter size offset */
+    width: auto;
+}
+.my-masonry-grid_column {
+    padding-left: 30px; /* gutter size */
+    background-clip: padding-box;
+}
+
+/* Style your items */
+.my-masonry-grid_column > div { /* change div to reference your elements you put in <Masonry> */
+    margin-bottom: 30px;
 }
