Реализован компонент Поиск

--- a/src/style.css
+++ b/src/style.css
@@ -263,10 +263,10 @@ h3 .edit_album:hover i{
 .no_images .delete_image_btn{
     display: inline-block;
 }
-.edit_image_link{
+.edit_image_link,.album_title a{
     color: #4C681C;
 }
-.edit_image_link:hover{
+.edit_image_link:hover,.album_title a:hover{
     color: #99CC40;
 }
 .edit_image_link:hover i{
@@ -405,6 +405,75 @@ h3 .edit_album:hover i{
 #controls input[type="checkbox"]{
     display: inline-block;
     margin-right: 6px;
+}
+#controls i{
+    margin-left: 4px;
+    margin-right: 6px;
+}
+.search_results{
+    font-size: 1.5rem;
+}
+.open_search_btn{
+    border: none;
+    display: inline-block;
+    padding: 2px 10px;
+    /*background-color: #b3a9a8;*/
+    /*background-color: #d4cac9;*/
+    background-color: #dfd5d4;
+    font-size: 1rem;
+}
+.open_search_btn:hover{
+    background-color: #d4cac9;
+}
+.search_modal{
+    position: fixed;
+    background-color: #fff;
+    width: 50%;
+    min-height: 200px;
+    left: 50%;
+    top: 50%;
+    z-index: 999999;
+    transform:translate(-50%,-50%);
+    /*text-align: center;*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#search_text_input{
+    border: 1px solid #B2AAA9;
+    padding: 2px 4px;
+    font-size: 1rem;
+    width: 80%;
+}
+#search_text_input:focus{
+    border: 1px solid #827C7B;
+}
+button.start_search{
+    border: none;
+    background-color: #99cc41;
+    padding: 4px 8px;
+    margin-left: 4px;
+}
+button.start_search:hover{
+    background-color: #B2ED4B;
+}
+.close_search{
+    font-size: 2rem;
+    padding: 0;
+    border: none;
+    display: inline-block;
+    cursor: pointer;
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: #ca3f3f;
+    transform:translate(25%,-25%) rotateZ(0);
+    transition-property: color,transform;
+    transition-duration: .5s;
+}
+.close_search:hover{
+    color: #ED1C1C;
+    transform:translate(25%,-25%) rotateZ(360deg);
 }
 #footer_wrapper{
     flex-shrink: 0;
