--- a/src/style.css
+++ b/src/style.css
@@ -62,13 +62,8 @@ header{
     position: relative;
 }
 .images > div > div > div > div > .album_info{
-    position: absolute;
-    left: 0;
-    top: 0;
-    background-color: rgba(0,0,0,.65);
-    color:white;
+    color: #030303;
     width: 100%;
-    height: 0;
     overflow: hidden;
     -webkit-transition: .3s;
     -moz-transition: .3s;
@@ -80,60 +75,19 @@ header{
     height: 100%;
 }
 
-/* .album_info{
-   position: absolute;
-   left: calc(1.5rem / 2);
-   top: 0;
-   background-color: rgba(0,0,0,.65);
-   color:white;
-   width: calc(100% - 1.5rem);
- }*/
 .images h3{
     font-size: 1.5rem;
     font-weight: bold;
 }
 .album_info h3 a{
     text-decoration: none;
-    color: white;
+    /*color: white;*/
+    color: #030303;
+    border-bottom: 1px dashed #030303;
 }
 .album_info h3 a:hover{
     color: #99CC40;
     border-bottom: 1px dashed #99CC40;
-}
-.album_info .description, .album_info .totally_images{
-    font-size: 0.8rem;
-}
-.images > div > div > div > div > .add_image_btn{
-    width: 30px;
-    height: 30px;
-    /*background-color: white;*/
-    background-color: #99CC40;
-    border-radius: 50%;
-    display: inline-block;
-    position: absolute;
-    /*color: transparent;*/
-    font-size: 30px;
-    transform: translate(-50%, -50%) rotateZ(0);
-    box-shadow: 0 0 2px rgba(0,0,0,.75);
-    opacity: 0;
-    /*transition-property: opacity,background-color,color;
-    transition-duration: .3s;*/
-    -webkit-transition: .3s;
-    -moz-transition: .3s;
-    -ms-transition: .3s;
-    -o-transition: .3s;
-    transition: .3s;
-    text-decoration: none;
-    text-align: center;
-    line-height: 26px;
-    font-weight: bold;
-    color: black;
-
-}
-.images > div > div > div > div:hover > .add_image_btn:hover{
-    background-color: black;
-    color: #99CC40;
-    transform: translate(-50%, -50%) rotateZ(360deg);
 }
 .add_image_link{
     display: inline-block;
@@ -173,6 +127,34 @@ header{
     color: black;
     transform:rotateZ(360deg);
     background-color: #ACE648;
+}
+.album_info .add_image_btn{
+    width: 30px;
+    height: 30px;
+    background-color: #99CC40;
+    border-radius: 50%;
+    display: inline-block;
+    font-size: 30px;
+    transform: rotateZ(0);
+    box-shadow: 0 0 2px rgba(0,0,0,.75);
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    -ms-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s;
+    text-decoration: none;
+    text-align: center;
+    line-height: 26px;
+    font-weight: bold;
+    color: black;
+    margin-right: 4px;
+    border: none;
+}
+.album_info .add_image_btn:hover{
+    background-color: black;
+    color: #99CC40;
+    transform: rotateZ(360deg);
+    border: none;
 }
 .delete_album_btn{
     width: 50px;
